--- a/ToDoList/Views/Items/Create.cshtml
+++ b/ToDoList/Views/Items/Create.cshtml
@@ -1,4 +1,4 @@
-@* @{
+@{
   Layout = "_Layout";
 }
 
@@ -8,12 +8,12 @@
 
 @using (Html.BeginForm())
 {
-  @Html.LabelFor(model => model.Description)
-  @Html.TextBoxFor(model => model.Description)
+    @Html.LabelFor(model => model.Description)
+    @Html.TextBoxFor(model => model.Description)
 
-  @Html.LabelFor(model => model.Category)
-  @Html.DropDownList("CategoryId")
+    @Html.Label("Select category")
+    @Html.DropDownList("CategoryId")
 
-  <input type="submit" value="Add new item" class="btn btn-default" />
+    <input type="submit" value="Add new item" class="btn btn-default" />
 }
-<p>@Html.ActionLink("Show all items", "Index")</p> *@
+<p>@Html.ActionLink("Show all items", "Index")</p>
