--- a/ToDoList/Views/Items/Create.cshtml
+++ b/ToDoList/Views/Items/Create.cshtml
@@ -14,6 +14,7 @@
     @Html.Label("Select category")
     @Html.DropDownList("CategoryId")
 
-    <input type="submit" value="Add new item" class="btn btn-default" />
+    <input type="submit" value="Add new item"/>
 }
 <p>@Html.ActionLink("Show all items", "Index")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
