--- a/ToDoList/Views/Items/Details.cshtml
+++ b/ToDoList/Views/Items/Details.cshtml
@@ -32,3 +32,4 @@ else
 <p>@Html.ActionLink("Edit Item", "Edit", new { id = Model.ItemId })</p>
 <p>@Html.ActionLink("Delete Item", "Delete", new { id = Model.ItemId })</p>
 <p>@Html.ActionLink("Add a Category", "AddCategory", new { id = Model.ItemId })</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
